<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainFragment">

    <Button
        android:id="@+id/buttonService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_stop_service" />

    <Button
        android:id="@+id/buttonPickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_image" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <Button
        android:id="@+id/realtimeDataBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realtime_database" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>